# geometry-processing-mesh-segmentation

./: CMakeLists.txt  README.md  main.cpp
include/: per_face_feature.h  similarity_matrix.h  spectral_clustering.h
src/: per_face_feature.cpp  similarity_matrix.cpp  spectral_clustering.cpp
